--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -2,13 +2,13 @@
 # Owner's Personal Information
 ###########################################################
 # This is your brand name
-brand: "Your Brand"
+brand: "Mark Noah's Website"
 
 # text below the brand name
 brand_sub_text: "$site_sample"
 
 # used for seo meta post author (if it's not defined in post)
-name: "Your Name"
+name: "Mark Noah's Website"
 
 # home page top header texts
 home:
@@ -48,7 +48,7 @@ meta_common_description: "Your meta description."
 # the order of the items will be shown as here.
 # comment to remove any contact item
 contacts:
-  #- github: ""
+  - github: "MarkNoah"
   #- email: ""
   #- linkedin: ""
   #- twitter: ""
