--- a/_data/owner/ja.yml
+++ b/_data/owner/ja.yml
@@ -2,13 +2,13 @@
 # Owner's Personal Information
 ###########################################################
 # This is your brand name
-brand: "サイト名"
+brand: "マーク・ノアのウェブサイト"
 
 # text below the brand name
 brand_sub_text: "$site_sample"
 
 # used for seo meta post author (if it's not defined in post)
-name: "作者名"
+name: "マーク・ノアのウェブサイト"
 
 # home page top header texts
 home:
@@ -48,7 +48,7 @@ meta_common_description: "メタディスクリプション"
 # the order of the items will be shown as here.
 # comment to remove any contact item
 contacts:
-  #- github: ""
+  - github: "MarkNoah"
   #- email: ""
   #- linkedin: ""
   #- twitter: ""
