--- a/_data/owner/en.yml
+++ b/_data/owner/en.yml
@@ -5,7 +5,7 @@
 brand: "Mark Noah's Website"
 
 # text below the brand name
-brand_sub_text: "$The Website about Everything"
+brand_sub_text: "The Website about Everything"
 
 # used for seo meta post author (if it's not defined in post)
 name: "Mark Noah's Website"
